--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -7,7 +7,7 @@
 body {
     padding: 0;
     margin: 0;
-    cursor: url("/cursor.png"), auto;
+    cursor: url("cursor.png"), auto;
     animation: fadeIn 3s;
 }
 
@@ -19,7 +19,8 @@ body {
 /* not working rn */
 .scrollsnap {
     scroll-snap-type: y mandatory;
-    overflow-x: auto;
+    flex-flow: column nowrap;
+    overflow-x: hidden;
 }
 
 div {
