--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -7,7 +7,7 @@
 body {
     padding: 0;
     margin: 0;
-    cursor: url("cursor.png"), auto;
+    cursor: url("/cursor.png"), auto;
     animation: fadeIn 3s;
 }
 
